src/test/ui/macros/span-covering-argument-1.stderr
error[E0596]: cannot borrow immutable local variable `foo` as mutable
  --> $DIR/span-covering-argument-1.rs:5:19
   |
LL |             let $s = 0;
   |                 -- help: make this binding mutable: `mut $s`
LL |             *&mut $s = 0;
   |                   ^^ cannot borrow mutably
...
LL |     bad!(foo whatever);
   |     ------------------- in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
